--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
 
 :root {
   --primary-bg: #f14d5d;
-  --secondary-bg: #2878eb;
+  --secondary-bg: #1d5092;
 }
 
 /* Text Selection Styles */
@@ -43,6 +43,11 @@ h6 {
   padding: 0;
   margin: 0;
 }
+
+h2 {
+  color: var(--secondary-bg) !important;
+}
+
 /* Breadcrumb */
 .breadcrumb-section {
   background: url("./Img/breadcrumb.jpg") no-repeat center center;
@@ -76,18 +81,31 @@ h6 {
 
 /* Header Section */
 #header {
-  background-color: var(--primary-bg) !important;
+  background-color: var(--secondary-bg) !important;
   padding: 0 !important;
 }
 
 #header #free-btn {
-  background-color: var(--secondary-bg) !important;
+  background-color: white !important;
   padding: 11px 10px 9px;
-  color: white;
+  color: var(--secondary-bg);
+  font-weight: bold;
+  border-bottom: 1px solid var(--secondary-bg);
 }
 
 .navbar-nav a:hover {
   color: var(--secondary-bg) !important;
+}
+
+.logo {
+  text-shadow: 2px 2px 4px rgba(49, 45, 45, 0.5);
+}
+
+/* Hero Banner Styling */
+.hero-banner {
+  width: 100%;
+  height: 500px;
+  background: url("./image/banner-vaibhav.png") no-repeat center center;
 }
 
 /* Hero & Carousel Section */
@@ -167,14 +185,15 @@ h6 {
   padding: 0 15px;
 }
 
-.carousel-content h1 {
+.banner-content h1 {
   /* font-size: 3.5rem; */
   margin-bottom: 1rem;
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 }
 
-.carousel-content p {
+.banner-content p {
   font-size: 1.5rem;
+  color: var(--secondary-bg);
   margin-bottom: 2rem;
   text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5);
 }
@@ -185,7 +204,7 @@ h6 {
   background-color: var(--primary-bg);
   color: white;
   text-decoration: none;
-  border-radius: 5px;
+  border-radius: 10px;
   font-weight: normal;
   transition: transform 0.3s ease;
 }
@@ -200,7 +219,7 @@ h6 {
   background-color: var(--secondary-bg);
   color: white;
   text-decoration: none;
-  border-radius: 5px;
+  border-radius: 10px;
   font-weight: normal;
   transition: transform 0.3s ease;
 }
